<resources>
    <string name="app_name">LoginSignUpxlm</string>
    <string name="registerpage">Register Page</string>
    <string name="required_info">*Required Info</string>
    <string name="username">Username*</string>
    <string name="email_address">Email Address*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="enter_password">Enter Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="sign_up">Sign Up</string>
        <string name="title_activity_register">Register</string>
        <string name="prompt_email">Email</string>
        <string name="prompt_password">Password</string>
        <string name="action_sign_in">Sign in or register</string>
        <string name="action_sign_in_short">Sign in</string>
        <string name="welcome">"Welcome !"</string>
        <string name="invalid_username">Not a valid username</string>
        <string name="invalid_password">Password must be >5 characters</string>
        <string name="login_failed">"Login failed"</string>
        <string name="enter_email">Enter email*</string>
        <string name="elkom">Elkom</string>
        <string name="shop">Shop</string>
        <string name="login_account">Login Account</string>
        <string name="login">Login</string>
        <string name="create_account">Create Account</string>
        <string name="forgot_password">Forgot Password?</string>
        <string name="not_registered_yet">Not registered yet?</string>
        <string name="title_activity_admin_page">AdminPage</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>

        <string name="menu_home">Home</string>
        <string name="menu_gallery">Gallery</string>
        <string name="menu_slideshow">Slideshow</string>
        <string name="home_page">Home Page</string>
        <string name="accounts_requests">Accounts Requests</string>
        <string name="posts_requests">Posts Requests</string>
        <string name="manage_categories">Manage Categories</string>
        <string name="reports">Reports</string>
        <string name="log_out">Log out</string>
        <string name="admin_login">Admin Login</string>
        <string name="RegisterPage">SignUp</string>
        <string name="HintUserName">UserName*</string>
        <string name="HintEmail">Email Address*</string>
        <string name="HintPhone">Phone Number*</string>
        <string name="HintPassword">Enter Password*</string>
        <string name="HintConfirm">Confirm Password*</string>
</resources>