<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingBottom="10dp"
    android:outlineAmbientShadowColor="#000000"
    tools:context=".UserLogin"
    android:gravity="">


    <TextView
        android:id="@+id/loginAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,NestedWeights" />

    <TextView
        android:id="@+id/adminLogin_Txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/admin_login"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="RtlCompat,RtlHardcoded" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#000000" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="40dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elkom"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop"
        android:textAlignment="center"
        android:textColor="#6D3C9A"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />
</LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:padding="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/geditEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_shape"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/geditPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_shape"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck,DuplicateClickableBoundsCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPass_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/forgot_password"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/login_Btn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/dpurble"
                app:cornerRadius="20dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:text="@string/not_registered_yet"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/createAcc_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>